# daffm

./: .gitignore  Makefile  README.md  config.toml  daffm.cabal  example-config.toml  flake.nix  hie.yaml  justfile  notes.org
.github/workflows/: release.yml
docs/: daffm.1  daffm.md
exe/: Main.hs
lib/: Daffm.hs
lib/Daffm/: Args.hs  Attrs.hs  Configuration.hs  Event.hs  Keymap.hs  State.hs  Types.hs  Utils.hs  View.hs
lib/Daffm/Action/: Cmdline.hs  Commands.hs  Core.hs  Keymap.hs
specs/: Main.hs
specs/Specs/: FooSpec.hs
